Ansible/Kubernetes/k8smanifests/certmanagertesting/prod/prod-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mrcurls-gateway-prod
  namespace: istio-system

spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "mrcurls.org"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: mrcurls-cert-prod
      hosts:
        - "rancher.mrcurls.org"
        - "argocd.mrcurls.org"
        - "istio.mrcurls.org"
        - "www.mrcurls.org"
---
